fix: upgrade vitest to v3.2.4 to resolve security vulnerabilities
- Update vitest from ^1.0.0 to ^3.2.4 across all packages
- Fixes 4 moderate severity vulnerabilities in esbuild, vite, vite-node dependency chain
- All tests continue to pass (37/37)
- No breaking changes introduced

Resolves npm audit findings:
- esbuild <=0.24.2 (development server request vulnerability)
- vite 0.11.0 - 6.1.6 (depends on vulnerable esbuild)
- vite-node <=2.2.0-beta.2 (depends on vulnerable vite)
- vitest 0.0.1 - 2.2.0-beta.2 (depends on vulnerable dependencies)

--- a/packages/nodash-sdk/package.json
+++ b/packages/nodash-sdk/package.json
@@ -19,13 +19,21 @@
     "test:run": "vitest run --reporter=verbose --pool=threads",
     "typecheck": "tsc --noEmit --incremental"
   },
-  "keywords": ["nodash", "sdk", "analytics", "tracking", "web", "browser", "esm"],
+  "keywords": [
+    "nodash",
+    "sdk",
+    "analytics",
+    "tracking",
+    "web",
+    "browser",
+    "esm"
+  ],
   "author": "Nodash Team",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "typescript": "^5.0.0",
-    "vitest": "^1.0.0",
+    "vitest": "^3.2.4",
     "@types/node": "^20.0.0",
     "jsdom": "^23.0.0"
   },
